--- a/README
+++ b/README
@@ -1,6 +1,3 @@
-The microchip mrf24j40ma is an 802.15.4 module, with a SPI interface.  It's nice and cheap, and it is
-readily usable on a breadboard, unlike xbee modules.  More information here:
-http://www.microchip.com/wwwproducts/Devices.aspx?dDocName=en535967
+The Microchip MRF24J40MA is an 802.15.4 module, with an SPI interface.  It's nice and cheap, and it is readily usable on a breadboard, unlike XBee modules.  More information is in http://www.microchip.com/wwwproducts/Devices.aspx?dDocName=en535967
 
-This library provides a basic interface to send and receive packets using plain 802.15.4.  beacon mode
-is not supported.
+This library provides a basic interface to send and receive packets using plain 802.15.4.  Beacon mode is not supported.
